Direct build (without going through wizard); modified makefile to enable parallel build

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -44,10 +44,10 @@ xsa: $(XCCL_XSA)
 
 
 $(XCCL_XSA): $(GEN_KERNEL_TCL) $(REBUILD_BD_TCL)  tcl/control_bd.tcl tcl/dma_bd.tcl tcl/rx_bd.tcl tcl/tx_bd.tcl
-	make -C hls/hostctrl DEVICE=$(FPGAPART)
-	make -C hls/arith DEVICE=$(FPGAPART)
-	make -C hls/vnx_intf DEVICE=$(FPGAPART)
-	make -C hls/tcp_intf DEVICE=$(FPGAPART)
+	$(MAKE) -C hls/hostctrl DEVICE=$(FPGAPART)
+	$(MAKE) -C hls/arith DEVICE=$(FPGAPART)
+	$(MAKE) -C hls/vnx_intf DEVICE=$(FPGAPART)
+	$(MAKE) -C hls/tcp_intf DEVICE=$(FPGAPART)
 	vivado -mode batch -source $< -tclargs $(FPGAPART) $(BOARDPART) $(DEBUG) $(XCCL_XSA)
 
 OPTIMIZATION=0
