--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,18 +9,18 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-DACCL_BD_SIM",
-                "-I../../../../hlslib/include/hlslib/xilinx/",
+                "-I../../hlslib/include/hlslib/xilinx/",
                 "-I/home/lpetrica/Xilinx/Vivado/2020.2/include/",
-                "-I../../../reduce_sum",
-                "-I../../../cclo/hls/vnx_intf",
-                "-I../../../hp_fp_stream_conv",
-                "-I../../../fp_hp_stream_conv",
-                "-I../sw_apps/ccl_offload_control/src",
+                "-I../../kernels/reduce_sum",
+                "-I../../kernels/cclo/hls/vnx_intf",
+                "-I../../kernels/hp_fp_stream_conv",
+                "-I../../kernels/fp_hp_stream_conv",
+                "-I../../kernels/cclo/fw/sw_apps/ccl_offload_control/src",
                 "${file}",
-                "../sw_apps/ccl_offload_control/src/ccl_offload_control.c",
-                "../../../reduce_sum/reduce_sum.cpp",
-                "../../hls/vnx_intf/vnx_depacketizer.cpp",
-                "../../hls/vnx_intf/vnx_packetizer.cpp",
+                "../../kernels/cclo/fw/sw_apps/ccl_offload_control/src/ccl_offload_control.c",
+                "../../kernels/reduce_sum/reduce_sum.cpp",
+                "../../kernels/cclo/hls/vnx_intf/vnx_depacketizer.cpp",
+                "../../kernels/cclo/hls/vnx_intf/vnx_packetizer.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
                 "-lpthread",
