--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,14 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++17",
+                "-DZMQ_CALL_VERBOSE",
                 "-DACCL_BD_SIM",
                 "-I../../hlslib/include/hlslib/xilinx/",
                 "-I/home/lpetrica/Xilinx/Vivado/2020.2/include/",
                 "-I../../kernels/reduce_sum",
                 "-I../../kernels/cclo/hls/vnx_intf",
+                "-I../../kernels/cclo/hls/krnl_intf",
                 "-I../../kernels/hp_fp_stream_conv",
                 "-I../../kernels/fp_hp_stream_conv",
                 "-I../../kernels/cclo/fw/sw_apps/ccl_offload_control/src",
@@ -21,6 +24,7 @@
                 "../../kernels/reduce_sum/reduce_sum.cpp",
                 "../../kernels/cclo/hls/vnx_intf/vnx_depacketizer.cpp",
                 "../../kernels/cclo/hls/vnx_intf/vnx_packetizer.cpp",
+                "../../kernels/cclo/hls/krnl_intf/krnl_packetizer.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
                 "-lpthread",
