--- a/demo/simulation/Makefile
+++ b/demo/simulation/Makefile
@@ -1,4 +1,3 @@
-
 # /*******************************************************************************
 #  Copyright (C) 2021 Xilinx, Inc
 #
@@ -16,24 +15,16 @@
 #
 # *******************************************************************************/
 
-TARGET=ip
-PLATFORM ?= xilinx_u280_xdma_201920_3
-DEBUG ?= none
+ACCL_REPO_ROOT=$(shell pwd)/../../
+MPI_INCLUDES=-I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi -I/usr/lib/x86_64-linux-gnu/openmpi/include
+MPI_LIBPATHS=-L/usr/lib/x86_64-linux-gnu/openmpi/lib
+MB_FW_DIR=$(ACCL_REPO_ROOT)/kernels/cclo/fw/sw_apps/ccl_offload_control/src
 
-ifeq (u250,$(findstring u250, $(PLATFORM)))
-	FPGAPART=xcu250-figd2104-2L-e
-else ifeq (u280,$(findstring u280, $(PLATFORM)))
-	FPGAPART=xcu280-fsvh2892-2L-e
-else
-	$(error Unsupported PLATFORM)
-endif
+tb: testbench.cpp xsi_loader.cpp xsi_loader.h
+	g++ -std=c++17 -fdiagnostics-color=always -g testbench.cpp xsi_loader.cpp -DZMQ_CALL_VERBOSE -I. -I${XILINX_VIVADO}/data/xsim/include/ -I${MPI_INCLUDES} -I${MB_FW_DIR} -o $@ -L${MPI_LIBPATHS} -ldl -lrt -lpthread -lmpi_cxx -lmpi -lzmqpp -lzmq -ljsoncpp
 
-.PHONY: plugins cclo
+run: tb
+	LD_LIBRARY_PATH=${XILINX_VIVADO}/lib/lnx64.o ./tb xsim.dir/ccl_offload/xsimk.so
 
-all: plugins cclo
-
-plugins:
-	$(MAKE) -C $@ DEVICE=$(FPGAPART) TARGET=$(TARGET)
-
-cclo:
-	$(MAKE) -C $@ PLATFORM=$(FPGAPART) DEBUG=$(DEBUG)
+distclean:
+	git clean -xfd
