--- a/kernels/plugins/reduce_sum/Makefile
+++ b/kernels/plugins/reduce_sum/Makefile
@@ -19,11 +19,11 @@ TARGET=ip
 DEVICE=xcu250-figd2104-2L-e
 DTYPES=float half double int32_t int64_t
 DWIDTH=512
-REDUCE_IP = $(addsuffix _$(DWIDTH).xo, $(addprefix reduce_sum_, $(DTYPES)))
+REDUCE_IP = $(addsuffix .xo, $(addprefix reduce_sum_, $(DTYPES)))
 
 all: $(REDUCE_IP)
 
-reduce_sum_%_$(DWIDTH).xo: build.tcl reduce_sum.cpp
+reduce_sum_%.xo: build.tcl reduce_sum.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE) $* $(DWIDTH)
 
 
