--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,32 @@
+/*******************************************************************************
+#  Copyright (C) 2021 Xilinx, Inc
+#
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
+# *******************************************************************************/
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "g++ - Build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["udp", 5500, "${fileDirname}/xsim.dir/ccl_offload_behav/xsimk.so", "2>/dev/null"],
-            "stopAtEntry": true,
-            "cwd": "${fileDirname}",
-            "environment": [{"name":"LD_LIBRARY_PATH","value":"${env:XILINX_VIVADO}/lib/lnx64.o"}],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "miDebuggerPath": "/usr/bin/gdb"
+            "name": "Attach to gdbserver",
+            "type": "gdb",
+            "request": "attach",
+            "executable": "${fileDirname}/${fileBasenameNoExtension}",
+            "target": "localhost:9999",
+            "remote": true,
+            "cwd": "${fileDirname}", 
+            "gdbpath": "/usr/bin/gdb",
+            "autorun": [ "interrupt" ]
         }
     ]
 }
