--- a/test/hardware/config/link_config_u280_tcp.ini
+++ b/test/hardware/config/link_config_u280_tcp.ini
@@ -18,6 +18,7 @@
 # Define number of kernels and their name
 nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
+nk=hostctrl:1:hostctrl_0
 nk=cmac_krnl:1:cmac_krnl_0
 nk=reduce_sum_half_512:1:arith_hp_0
 nk=reduce_sum_float_512:1:arith_fp_0
@@ -43,6 +44,7 @@ slr=arith_dp_0:SLR0
 slr=arith_i32_0:SLR0
 slr=arith_i64_0:SLR0
 slr=ccl_offload_0:SLR0
+slr=hostctrl_0:SLR0
 slr=network_krnl_0:SLR1
 slr=cmac_krnl_0:SLR2
 
@@ -50,7 +52,10 @@ sp=network_krnl_0.m00_axi:HBM[6]
 sp=network_krnl_0.m01_axi:HBM[6]
 sp=ccl_offload_0.m_axi_0:HBM[0:5]
 sp=ccl_offload_0.m_axi_1:HBM[0:5]
-sp=ccl_offload_0.m_axi_2:HBM[0:5]
+
+# Connect host controllers to CCL Offload
+sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
+sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
 sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status:512
