--- a/test/hardware/config/link_config_u250_tri.ini
+++ b/test/hardware/config/link_config_u250_tri.ini
@@ -18,20 +18,20 @@
 [connectivity]
 # Define number of kernels and their name
 nk=ccl_offload:3:ccl_offload_0.ccl_offload_1.ccl_offload_2
+nk=hostctrl:3:hostctrl_0.hostctrl_1.hostctrl_2
 nk=network_krnl:3:network_krnl_0.network_krnl_1.network_krnl_2
 nk=reduce_sum_half_512:3:arith_hp_0.arith_hp_1.arith_hp_2
 nk=reduce_sum_float_512:3:arith_fp_0.arith_fp_1.arith_fp_2
 nk=reduce_sum_double_512:3:arith_dp_0.arith_dp_1.arith_dp_2
 nk=reduce_sum_int32_t_512:3:arith_i32_0.arith_i32_1.arith_i32_2
 nk=reduce_sum_int64_t_512:3:arith_i64_0.arith_i64_1.arith_i64_2
-nk=fp_hp_stream_conv:3:downcast_0.downcast_1.downcast_2
-nk=hp_fp_stream_conv:6:upcast_0_0.upcast_0_1.upcast_0_2.upcast_1_0.upcast_1_1.upcast_1_2
 nk=fp_hp_stream_conv:9:downcast_0_0.downcast_0_1.downcast_0_2.downcast_1_0.downcast_1_1.downcast_1_2.downcast_2_0.downcast_2_1.downcast_2_2
 nk=hp_fp_stream_conv:9:upcast_0_0.upcast_0_1.upcast_0_2.upcast_1_0.upcast_1_1.upcast_1_2.upcast_2_0.upcast_2_1.upcast_2_2
 nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
+slr=hostctrl_0:SLR0
 slr=network_krnl_0:SLR0
 slr=downcast_0_0:SLR0
 slr=downcast_0_1:SLR0
@@ -46,12 +46,12 @@ slr=arith_i32_0:SLR0
 slr=arith_i64_0:SLR0
 slr=lb_user_krnl_0:SLR0
 
-sp=ccl_offload_0.m_axi_0:HBM[0:5]
-sp=ccl_offload_0.m_axi_1:HBM[0:5]
-sp=ccl_offload_0.m_axi_2:HBM[0:5]
+sp=ccl_offload_0.m_axi_0:DDR[0]
+sp=ccl_offload_0.m_axi_1:DDR[0]
 
 # Kernels Foorplaning
 slr=ccl_offload_1:SLR1
+slr=hostctrl_1:SLR1
 slr=network_krnl_1:SLR1
 slr=downcast_1_0:SLR1
 slr=downcast_1_1:SLR1
@@ -66,12 +66,12 @@ slr=arith_i32_1:SLR1
 slr=arith_i64_1:SLR1
 slr=lb_user_krnl_1:SLR1
 
-sp=ccl_offload_1.m_axi_0:HBM[6:11]
-sp=ccl_offload_1.m_axi_1:HBM[6:11]
-sp=ccl_offload_1.m_axi_2:HBM[6:11]
+sp=ccl_offload_1.m_axi_0:DDR[1]
+sp=ccl_offload_1.m_axi_1:DDR[1]
 
 # Kernels Foorplaning
 slr=ccl_offload_2:SLR2
+slr=hostctrl_2:SLR2
 slr=network_krnl_2:SLR2
 slr=downcast_2_0:SLR2
 slr=downcast_2_1:SLR2
@@ -86,9 +86,16 @@ slr=arith_i32_2:SLR2
 slr=arith_i64_2:SLR2
 slr=lb_user_krnl_2:SLR2
 
-sp=ccl_offload_2.m_axi_0:HBM[12:17]
-sp=ccl_offload_2.m_axi_1:HBM[12:17]
-sp=ccl_offload_2.m_axi_2:HBM[12:17]
+sp=ccl_offload_2.m_axi_0:DDR[2]
+sp=ccl_offload_2.m_axi_1:DDR[2]
+
+# Connect host controllers to CCL Offload
+sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
+sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
+sc=hostctrl_1.cmd:ccl_offload_1.s_axis_call_req
+sc=ccl_offload_1.s_axis_call_ack:hostctrl_1.sts
+sc=hostctrl_2.cmd:ccl_offload_2.s_axis_call_req
+sc=ccl_offload_2.s_axis_call_ack:hostctrl_2.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
 sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status
@@ -172,7 +179,6 @@ stream_connect=arith_dp_2.out_r:arith_i32_2.in_r
 stream_connect=arith_i32_2.out_r:arith_i64_2.in_r
 stream_connect=arith_i64_2.out_r:ccl_offload_2.s_axis_arith_res
 
-# (Temporary) caster connections
 # (Temporary) caster connections
 stream_connect=ccl_offload_0.m_axis_compression0:downcast_0_0.in_r
 stream_connect=downcast_0_0.out_r:upcast_0_0.in_r
