--- a/test/hardware/config/link_config_u280_lb.ini
+++ b/test/hardware/config/link_config_u280_lb.ini
@@ -18,6 +18,7 @@
 [connectivity]
 # Define number of kernels and their name
 nk=ccl_offload:1:ccl_offload_0
+nk=hostctrl:1:hostctrl_0
 nk=network_krnl:1:network_krnl_0
 nk=reduce_sum_half_512:1:arith_hp_0
 nk=reduce_sum_float_512:1:arith_fp_0
@@ -30,6 +31,7 @@ nk=loopback:3:lb_udp.lb_tcp.lb_user_krnl
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
+slr=hostctrl_0:SLR0
 slr=network_krnl_0:SLR0
 slr=downcast_0_0:SLR0
 slr=downcast_0_1:SLR0
@@ -48,7 +50,10 @@ slr=lb_user_krnl:SLR0
 
 sp=ccl_offload_0.m_axi_0:HBM[12:17]
 sp=ccl_offload_0.m_axi_1:HBM[12:17]
-sp=ccl_offload_0.m_axi_2:HBM[12:17]
+
+# Connect host controllers to CCL Offload
+sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
+sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
 sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status
